daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N6_wrong_enum_value/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a7636584034fddea90caee6ce9b57aa04f9df5f56ae76e67ed5c9b33dae1d5291013b874e0f43409a54640bbf4f621960d7b55399b91f87b5aa34cffc0c74b5d999691b84
